--- a/ex09/src/main/resources/templates/list.html
+++ b/ex09/src/main/resources/templates/list.html
@@ -3,31 +3,35 @@
 <head>
     <meta charset="UTF-8"/>
     <title>List of all persons</title>
+
     <style type="text/css">
         body {
             padding: 50px;
         }
 
-        .row {
+        .checkers {
             border: 1px solid steelblue;
             width: 300px;
             border-collapse: collapse;
+        }
 
-        .row tr td, th {
+        .checkers tr td, th {
             padding: 5px;
             border: 1px solid steelblue;
         }
 
-        .row td:last-child, td:first-child {
+        .checkers td:last-child, td:first-child {
             width: 50px;
         }
 
     </style>
+
 </head>
 <body>
-<h3>Это шахматная доска с шашками. O - белая шашка. X - черная шашка:</h3>
+<h3>Уголки</h3>
+<h4>O - белая шашка. X - черная шашка:</h4>
 
-<table class="row">
+<table class="checkers">
     <thead>
     <tr>
         <th></th>
