--- a/ex09/src/main/resources/templates/list.html
+++ b/ex09/src/main/resources/templates/list.html
@@ -29,8 +29,69 @@
 </head>
 <body>
 <h3>Уголки</h3>
-<h5>O - белые</h5>
-<h5>X - черные</h5>
+
+<!--
+<h5>Исходные координаты</h5>
+<select class="x_from" id="x_from_id">
+    <option th:each="x_from : ${xys.xFrom}" th:value="${x_from}" th:text="${x_from}"></option>
+</select>
+
+<select class="y_from" id="y_from_id">
+    <option th:each="y_from : ${xys.yFrom}" th:value="${y_from}" th:text="${y_from}"></option>
+</select>
+
+<h5>Конечные координаты</h5>
+
+<select class="x_to" id="x_to_id">
+    <option th:each="x_to : ${xys.xTo}" th:value="${x_to}" th:text="${x_to}"></option>
+</select>
+
+<select class="y_to" id="y_to_id" name="YYY">
+<option th:each="y_to : ${xys.yTo}" th:value="${y_to}" th:text="${y_to}" th:selected="*{y.contains('1')}"></option>
+-->
+
+<form action="#" th:action="@{/do-stuff2}" th:object="${xys}" method="post">
+    <div class="row">
+        <label for="id-input" th:text="'X1:'">X1:</label>
+        <input id="id-input" type="text" name="xFirst" th:value="${xys.xFirst}" value="1"/>
+    </div>
+    <div class="row">
+        <label for="id-input2" th:text="'Y1:'">Y1:</label>
+        <input id="id-input2" type="text" name="yFirst" th:value="${xys.yFirst}" value="2"/>
+    </div>
+    <div class="row">
+        <label for="id-input3" th:text="'X2:'">X2:</label>
+        <input id="id-input3" type="text" name="xSecond" th:value="${xys.xSecond}" value="3"/>
+    </div>
+    <div class="row">
+        <label for="id-input4" th:text="'Y2:'">Y2:</label>
+        <input id="id-input4" type="text" name="ySecond" th:value="${xys.ySecond}" value="4"/>
+    </div>
+
+    <td>
+        <input type="submit" value="Ход" />
+    </td>
+</form>
+
+
+<!--<div class="step">-->
+<!--    &lt;!&ndash;<button type="submit" th:text="Ход">Ход</button>&ndash;&gt;-->
+
+
+
+<!--    <button type="button" th:onclick="|window.location.href='/do-stuff/1'|">Ход</button>-->
+
+<!--    <br>-->
+<!--    <label for="relativeLink"> Relative link </label>-->
+<!--    <a id = "relativeLink" th:href="@{/do-stuff/(str=${YYY})}">relative link</a>-->
+
+<!--    &lt;!&ndash;    <a href="list.html" th:href="@{/}"><button type="button" th:text="#{cancel-button-caption}">Cancel</button></a>&ndash;&gt;-->
+
+<!--</div>-->
+
+
+<h5></h5>
+
 
 <table class="checkers">
     <thead>
