--- a/ex09/src/main/resources/templates/edit.html
+++ b/ex09/src/main/resources/templates/edit.html
@@ -40,7 +40,9 @@
 
     <div class="row">
         <button type="submit">Save</button>
-        <a href="list.html"><button type="button">Cancel</button></a>
+        <a href="list.html">
+            <button type="button">Cancel</button>
+        </a>
     </div>
 </form>
 
