--- a/ex09/src/main/resources/templates/welcome.html
+++ b/ex09/src/main/resources/templates/welcome.html
@@ -48,7 +48,7 @@
             <a th:href="@{/game(id=${game.id})}" href="game.html" th:text="Продолжить">Edit</a>
         </td>
         <td>
-            <a th:href="@{/game(id=${game.id})}" href="game.html" th:text="Продолжить">Edit</a>
+            <a th:href="@{/del(id=${game.id})}" th:method="DELETE" th:text="Удалить">Удалить</a>
         </td>
 
     </tr>
