--- a/ex09/src/main/resources/templates/welcome.html
+++ b/ex09/src/main/resources/templates/welcome.html
@@ -53,36 +53,28 @@
         <td>
             <a th:href="@{/game(id=${game.id})}" href="game.html" th:text="Продолжить">Edit</a>
         </td>
-
-        <!--
-                <td>
-                    <a th:href="@{/del(id=${game.id})}" th:method="post" th:text="Удалить">Удалить</a>
-                </td>
-        -->
-
-
     </tr>
     </tbody>
 </table>
 
 
-<form id="welcome-form" action="welcome.html" th:object="${welcome}">
+<!--<form id="welcome-form" action="welcome.html" th:object="${welcome}">-->
 
 
-    <!--
-        <div class="row">
-            <label for="loginDto-input">Login:</label>
-            <input id="loginDto-input" name="name" type="text" value="Your loginDto" th:value="*{loginDto}"/>
-        </div>
+<!--    &lt;!&ndash;-->
+<!--        <div class="row">-->
+<!--            <label for="loginDto-input">Login:</label>-->
+<!--            <input id="loginDto-input" name="name" type="text" value="Your loginDto" th:value="*{loginDto}"/>-->
+<!--        </div>-->
 
-        <div class="row">
-            <button type="submit">Save</button>
-            <a href="list.html">
-                <button type="button">Cancel</button>
-            </a>
-        </div>
-    -->
-</form>
+<!--        <div class="row">-->
+<!--            <button type="submit">Save</button>-->
+<!--            <a href="list.html">-->
+<!--                <button type="button">Cancel</button>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--    &ndash;&gt;-->
+<!--</form>-->
 
 </body>
 </html>
